Fix possible overflow

--- a/assets/sass/partials/_comments.sass
+++ b/assets/sass/partials/_comments.sass
@@ -39,6 +39,10 @@
 					&:last-of-type
 						margin-bottom: 0px
 
+				a
+					hyphens: auto
+					word-break: break-word
+
 			.welcomments__comment-reply-link
 				font-size: 19px
 
